--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ header {
 
 .content1,
 .content2 {
-    height: 600px;
+    /* height: 600px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -124,7 +124,7 @@ header {
 }
 
 .content1 img {
-    width: 700px;
+    width: 60%;
     height: 600px;
     object-fit: contain;
 }
@@ -306,3 +306,48 @@ td {
     padding: 8px;
     border: 1px solid rgba(168, 160, 160, 0.959);
 }
+
+@media screen and (max-width: 600px) {
+    header {
+        flex-direction: column;
+    }
+
+    .nav__links {
+        text-align: center;
+    }
+    .nav__links li {
+        display: block;
+        margin-bottom: 15px;
+    }
+
+    .hero__image {
+        display: none;
+    }
+
+    #main__index {
+        flex-direction: column;
+    }
+    .content1 {
+        flex-direction: column;
+    }
+
+    .content2 {
+        flex-direction: column-reverse;
+    }
+
+    .content1__text,
+    .content2__text {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .content1__text h1,
+    .content2__text h1 {
+        text-align: center;
+        margin-bottom: 5px;
+    }
+
+    .content1 img, .content2 img {
+        width:85%;
+    }
+
