--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
+    padding: 30px;
 }
 
 .logo {
@@ -119,7 +119,7 @@ header {
 
 .content1,
 .content2 {
-    /* height: 600px; */
+    height: 600px; 
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -146,7 +146,7 @@ header {
 
 footer {
     text-align: center;
-    padding: 50px 0 50px 0;
+    padding: 30px 0 30px 0;
     font-weight: 800;
     background-color: #eee;
 }
@@ -312,13 +312,20 @@ td {
 }
 
 @media screen and (max-width: 600px) {
-    header {
+    .header {
         flex-direction: column;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    .logo {
+        margin: 0 0 2rem 0;
     }
 
     .nav__links {
         text-align: center;
     }
+
     .nav__links li {
         display: block;
         margin-bottom: 15px;
