--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ a {
 body {
     background-color: white;
     height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.4;
+    font-size: 18px;
 }
 
 html {
@@ -43,7 +46,6 @@ header {
 .logo {
     cursor: pointer;
     margin-right: auto;
-    color: black; /*  OVO JE SAMO DA SE VIDI LOGO MAKNUTI KAD STAVIŠ LOGO */
 }
 
 .nav__links {
@@ -96,7 +98,6 @@ header {
 }
 
 .hero__search p {
-    font-size: large;
     font-weight: 700;
     color: #a3c6c4;
 }
@@ -123,7 +124,11 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    text-align: justify;
+}
+
+.content1 p,
+.content2 p {
+    margin-bottom: 1rem;
 }
 
 .content1 img {
@@ -132,10 +137,12 @@ header {
     object-fit: contain;
 }
 
-.content1__text,
+.content1__text {
+    margin-right: 100px;
+}
+
 .content2__text {
-    margin-right: 50px;
-    margin-left: 50px;
+    margin-left: 100px;
 }
 
 .content2 img {
@@ -165,6 +172,7 @@ footer {
     flex-direction: column;
     margin: 50px auto 0 auto;
     flex: 1 0 auto;
+    width: 100%;
 }
 
 textarea {
@@ -174,6 +182,7 @@ textarea {
 .contact__form {
     display: flex;
     gap: 100px;
+    width: 100%;
 }
 
 .contact__form form {
@@ -213,10 +222,19 @@ textarea {
     resize: vertical;
 }
 
-.contact__content img {
+.contact__content {
     width: 100%;
 }
 
+.slika__kontakt {
+    width: 100%;
+    height: 550px;
+    background-image: url(./pictures/daniel-j-schwarz-YtY724tdl7Y-unsplash.jpg);
+    display: block;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center 60%;
+}
 /* PROIZVODI I USLUGE STYLING  */
 
 #main__proizvodi {
@@ -258,14 +276,15 @@ textarea {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin: 50px auto 0;
     text-align: center;
+    max-width: 600px;
 }
 .katalog__section p {
     text-align: justify;
 }
 .katalog__section img {
-    width: 500px;
+    width: 100%;
     height: 300px;
 }
 
@@ -298,7 +317,7 @@ textarea {
 }
 
 table {
-    width: 80%;
+    width: 60%;
     height: 700px;
     border-collapse: collapse;
 }
@@ -378,13 +397,12 @@ td {
 
     .contact__form {
         flex-direction: column;
-        padding: 3rem 3rem;
-        gap: 50px;
+        padding: 1rem 1rem;
+        gap: 20px;
         margin-top: 0;
     }
 
-    .main__contact{
+    .main__contact {
         padding: 0 1rem;
     }
-
 }
