--- a/style.css
+++ b/style.css
@@ -333,6 +333,12 @@ td {
     border: 1px solid rgba(168, 160, 160, 0.959);
 }
 
+@media screen and (min-width:600px) and (max-width:768px) {
+
+    
+   
+}
+
 @media screen and (max-width: 600px) {
     .header {
         flex-direction: column;
